Readme and composer json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "erv-exi-soap",
+    "name": "stephanwoerner/erv-exi-soap",
     "license": "proprietary",
     "type": "project",
     "authors": [
