--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     },
     "require": {
         "php": ">=7.0",
-        "doctrine/orm": "^2.5.6",
-        "doctrine/doctrine-bundle": "^1.6.8"
+        "doctrine/orm": ">=2.5",
+        "doctrine/doctrine-bundle": ">=1.6"
     },
     "require-dev": {
     },
